# riscv-as

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
gperf/: hash_utils.c  instructions.gperf  meson.build
include/: argparser.h  common.h  debug.h  error.h  hash.h  instruction.h  meson.build  opcodes.h  symtable.h  utils.h  writer.h
src/: argparser.c  debug.c  error.c  hash.c  instruction.c  main.c  meson.build  opcodes.c  symtable.c  utils.c  writer.c
test/: base_instructions.s  opcode_definition.s  pseudoins.s  segments.s  stest.s
test/pk/: printstr.s  segmentprint.s  segments.s
